2008-1-2  Stuart Brorson (sdb@cloud9.net)
	* src/Makefile.am, src/icons.h, src/interface.c:
	Added icons for toggletool buttons: move, zoom, and measure.

2007-12-31  Julian Lamb
	* gerbv.c: Rework project filename saving to save all layers with relative
	  pathnames, relative to the project file location. This allows projects
	  to be relocated, and fixes the second half of bug# 1443885.
	* gerbv.c: More work on command line parsing.
	* interface.c, render.c, callbacks.c: Reimplement different rendering modes
	  into the sidepane combobox for GDK. For cairo, allow the user to change the
	  quality vs speed.
	* pick-and-place.c, draw.c: Correct pick and place parsing to use inches
	  for the basic unit. Render names of pick-and-place components to help
	  check placement.
	
2007-12-31  Stuart Brorson (sdb@cloud9.net)
        * src/drill.[hc], gerber.[hc], gerbv.c, pick-and-place.[hc]:
        Overhauled checks for file type.  Now all file types (Gerber,
        drill, pick-place) are FALSE by default, and only are TRUE
        when positive of file type indications are found.  Also added
        specific check for RS-284-D, and throw error if -D is found.
	
2007-12-30  Julian Lamb
	* callbacks.[ch], interface.c, others: Implement three "tools", namely
	  the pointer, zoom, and measure tool and hookup to the existing gui
	  stubs. Also, display an informative message in the message bar explaining
	  how to use the active tool (similar to Inkscape). Do some miscellaneous
	  cleanups in the gui code and rendering.
	* callbacks.c, render.[ch]: Get basic printing support working.

2007-12-28  Stefan Petersen  <spe@spe-laptop>
	* src/draw.c, src/amacro.[hc]: gerbv can handle comments
	  and calculations in aperture macros. Unfortunate this 
	  uncovered some errors in how aperture macros are drawn.
	  That will be next issue.

2007-12-28  Julian Lamb
	* gerber.c, many files: Finish implementing all remaining Gerber functions