@@ -72,7 +72,7 @@ typedef enum {
 
 typedef enum {
 	THERMAL_CENTER_X,
-	THERMAN_CENTER_Y,
+	THERMAL_CENTER_Y,
 	THERMAL_OUTSIDE_DIAMETER,
 	THERMAL_INSIDE_DIAMETER,
 	THERMAL_CROSSHAIR_THICKNESS,
